src/main/resources/darkmode.css
.button {
    -fx-background-color: #38414A;
    -fx-text-fill: #B6C2CF;
    -fx-border-color: #738496;
}

.button:hover {
    -fx-background-color: #738496;
}

.root {
    -fx-background-color: #282E33 !important;
}

.label {
    -fx-text-fill: #B6C2CF !important;
}

.tab-content {
    -fx-background-color: #38414A;
}

.tab-pane {
    -fx-background-color: #282E33;
    -fx-border-color: transparent;
    -fx-effect: null;
}

.tab .tab-label {
    -fx-text-fill: #B6C2CF;
}

.tab {
    -fx-background-color: #38414A;
    -fx-effect: dropshadow(gaussian, rgba(115,132,150,0.5), 5, 0, 3, 3);
}

.tab:hover {
    -fx-background-color: #738496;
}

.tab:selected {
    -fx-background-color: #454F59;
    -fx-focus-color: transparent;
    -fx-faint-focus-color: transparent;
    -fx-effect: innershadow(gaussian, rgba(89,103,115,0.5), 5, .25, 3, 3);
}

#trackID.selected_track {
    -fx-effect: innershadow(gaussian, rgba(0,0,0,0.5), 5, .5, 0, 0);
}

#trackIDtext:focused {
    -fx-background-color: rgba(0,0,0,0.25) !important;
    /*-fx-border-color: #118AB2;*/
    /*-fx-border-width: 2px;*/
    -fx-background-radius: 2px;
}

#trackID {
    -fx-background-radius: 5;
    -fx-border-width: 2px;
    -fx-border-insets: 2px;
    -fx-border-radius: 5px;
}

#trackIDtext {
    -fx-text-fill: #000000;
    -fx-background-color: transparent !important;
    -fx-background-insets: 0;
    -fx-background-radius: 0;
    -fx-border-color: transparent;
    -fx-border-width: 0;
    -fx-border-radius: 0;
    -fx-padding: 0;
    -fx-focus-color: transparent;
    -fx-faint-focus-color: transparent;
    -fx-highlight-fill: transparent;
    -fx-highlight-text-fill: -fx-text-inner-color;
}

#open_song_btn_parent, #song_name, #export_song_btn_parent, #save_song_btn_parent, #playback_btn_parent {
    -fx-background-color: #38414A;
    -fx-background-radius: 5px;
    -fx-effect: dropshadow(gaussian, rgba(115,132,150,0.5), 5, 0, 3, 3);
}

#open_song_btn_parent:hover, #save_song_btn_parent:hover, #export_song_btn_parent:hover, #snap_btn_parent:hover, #metronome_control_parent:hover, #record_control_parent:hover, #playback_btn_parent:hover {
    -fx-background-color: #738496;
}

#open_song_btn_parent:pressed, #save_song_btn_parent:pressed, #export_song_btn_parent:pressed, #record_control_parent:pressed, #metronome_control_parent:pressed, #snap_btn_parent:pressed, #playback_btn_parent:pressed {
    -fx-effect: innershadow(gaussian, rgba(115,132,150,0.5), 5, .25, 3, 3);
}

#record_control_parent.iactive, #metronome_control_parent.iactive, #snap_btn_parent.iactive, #playback_btn_parent.iactive {
    -fx-effect: innershadow(gaussian, rgba(115,132,150,0.5), 5, .25, 3, 3);
}

#record_control_parent.iactive, #metronome_control_parent.iactive, #snap_btn_parent.iactive {
    -fx-effect: innershadow(gaussian, rgba(115,132,150,0.5), 5, .25, 3, 3);
}

#record_control_parent, #bpm_control, #metronome_control_parent, #playback_pos, #audio_vis_top_parent, #amp_audio_top_parent, #pc_stats_parent, #snap_btn_parent {
    -fx-background-color: #38414A; -fx-effect: dropshadow(gaussian, rgba(115,132,150,0.5), 5, 0, 3, 3); -fx-background-radius: 5px;
}

#plugin_node {
    -fx-background-color: #38414A;
    -fx-background-radius: 5px;
    -fx-effect: dropshadow(gaussian, rgba(115,132,150,0.5), 5, 0, 3, 3);
}

#pan_knob {
    -fx-effect: dropshadow(gaussian, rgba(115,132,150,0.5), 5, 0, -3, 3);
}

#pitch_knob {
    -fx-effect: dropshadow(gaussian, rgba(115,132,150,0.5), 5, 0, -3, 3);
}

.tab-content {
    -fx-background-color: transparent;
}

.tab-pane .tab-header-background {
    -fx-background-color: #2C333A !important;
}

.scroll-pane {
    -fx-background-color: #282E33
}

.scroll-pane .viewport {
    -fx-background-color: #282E33 !important;
    -fx-border-width: 0px;
    -fx-border-color: transparent;
}

.scroll-pane .track {
    -fx-background-color: #282E33 !important;
}

.text-field {
    -fx-background-color: #596773 !important;
    -fx-effect: dropshadow(gaussian, rgba(115,132,150,0.5), 5, 0, 3, 3);
    -fx-text-fill: #B6C2CF;
}

.text-field:selected {
    -fx-focus-color: transparent;
    -fx-faint-focus-color: transparent;
}

.search {
    -fx-background-color: #596773;
    -fx-border-color: #38414A;
    -fx-border-radius: 5px;
    -fx-focus-color: transparent;
    -fx-faint-focus-color: transparent;
}

.split-pane-divider {
    -fx-background-color: #d9d9d9;
}

.split-pane > .split-pane-item {
    -fx-background-color: transparent;
}

.HBox {
    -fx-background-color: transparent;
}

.disabled {
    -fx-background-color: rgb(0,90,6); -fx-border-width: 1px; -fx-border-color: black; -fx-border-radius: 4px; -fx-background-radius: 4px
}

.active {
    -fx-background-color: #00FD11; -fx-border-width: 1px; -fx-border-color: black; -fx-border-radius: 4px; -fx-background-radius: 4px
}

#hbox_WAVE1, #hbox_WAVE2, #hbox_WAVE3, #recordExportBox, #waveHbox {
    -fx-background-color: #282E33 !important;
}

#vbox, #parameterChooser1, #parameterChooser2, #parameterChooser3, #waveVbox {
    -fx-background-color: #282E33 !important;
}

.muted {
    -fx-background-color: rgb(0,90,6); -fx-border-width: 1px; -fx-border-color: black; -fx-border-radius: 4px; -fx-background-radius: 4px
}

.active {
    -fx-background-color: #00FD11; -fx-border-width: 1px; -fx-border-color: black; -fx-border-radius: 4px; -fx-background-radius: 4px
}

.radio-button {
    -fx-text-fill: #B6C2CF;
}

.radio-button .radio{
    -fx-background-color: #596773;
    -fx-mark-color: #B6C2CF;
}

.stackpane {
    -fx-padding: 0px;
}

.menu-button {
    -fx-background-color: #38414A;
    -fx-text-fill: #B6C2CF;
}

.menu-item {
    -fx-background-color: #38414A;
    -fx-text-fill: #B6C2CF;
}

.menu-item:hover {
    -fx-background-color: #738496;
}

.pane {
    -fx-background-color: #282E33;
}

.tool-bar {
    -fx-background-color: #1D2125 !important;
    -fx-border-color: #454F59;
}

.slider .thumb {
    /*-fx-background-color: linear-gradient(from 0% 0% to 100% 100%, #ffffff, #d9d9d9);*/
    -fx-background-color: #d9d9d9;
    -fx-background-image: url("icons/line.png");
    -fx-background-size: 10px 10px;
    -fx-background-position: center;
    -fx-background-repeat: no-repeat;
    -fx-background-radius: 3;
    -fx-pref-height: 24px;
    -fx-effect: dropshadow(gaussian, rgba(115, 132, 150, 0.5), 3, 0, 2, 2);
    -fx-border-radius: 3;
}

.slider .axis {
    -fx-tick-label-fill: #B6C2CF;
}

#track_section {
    -fx-background-color: #282E33;
}

#file_ui {
    -fx-background-color: #8C9BAB;
    -fx-background-radius: 5px;
    -fx-effect: innershadow(gaussian, rgba(115, 132, 150, 0.5), 5, 0.25, 3, 3);
}

#hover_file {
    -fx-background-color: rgba(80, 86, 91, 0.1);
    -fx-background-radius: 5px;
}

#file_canvas {
    -fx-effect: dropshadow(gaussian, rgba(140,155,171,0.5), 5, 0, 3, 3);
    -fx-background-color: rgba(140,155,171,0.1);
    -fx-text-fill: #000000;
}

#hover_file {
    -fx-background-color: rgba(140,155,171,0.1);
    -fx-background-radius: 5px;
}

#channel_container {
    -fx-background-color: #404040; -fx-background-radius: 5px;
}

#vis_background {
    -fx-background-color: #808080; -fx-background-radius: 5px
}

#vis_container {
    -fx-border-width: 1px; -fx-border-color: black; -fx-border-radius: 5px
}

#mixer {
    -fx-background-color: #c1c1c1;
    -fx-background-radius: 5px;
}

#mixer .label {
    -fx-text-fill: #000000 !important;
}

#pipeline_node {
    -fx-background-color: #38414A;
    -fx-background-radius: 5px;
    -fx-effect: dropshadow(gaussian, rgba(115,132,150,0.5), 5, 0, 3, 3);
}

#output_port, #input_port {
    -fx-fill: #00FD11;
    -fx-stroke: black; -fx-stroke-width: 1;
}

#track_channel {
    -fx-background-color: #c1c1c1;
    -fx-background-radius: 5px;
}

#track_channel .label {
    -fx-text-fill: #000000 !important;
}

#masterVis {
    -fx-border-width: 1px;
    -fx-border-color: black;
    -fx-border-radius: 5px;
    -fx-background-color: #c1c1c1;
}

